<resources>
    <string name="app_name">Mr Kanapka</string>
    <string name="fetchError">Błąd podczas aktualizowania danych.\nSprawdź swoje połączenie z internetem.</string>
    <string name="fetchSuccess">Pomyślnie pobrano elementy.</string>
    <string name="cartSuccess">Pomyślnie dodano element do koszyka.</string>
    <string name="cartDelete">Pomyślnie usunięto element z koszyka.</string>
    <string name="sandDescritpion">Opis:</string>
    <string name="sandPrice">Cena:</string>
    <string name="price">Cena:</string>
    <string name="price1">Cena za sztukę:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="koszyk">Koszyk</string>
    <string name="kanapeczka">Smacznego dnia</string>
    <string name="email">zespol9.mat.umk@gmail.com</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_cart">Koszyk</string>
    <string name="food_name">Food Name</string>
    <string name="haslo">Hasło</string>
    <string name="email_login">Email</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="forget_password">Nie pamiętasz hasła?</string>
    <string name="register_text">Nie masz jeszcze konta?</string>
    <string name="register">
        <u>Zarejestruj się</u>
    </string>
    <string name="zarejestruj">Zarejestruj</string>
</resources>
