<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mrkanapka.mrkanapkakotlin.RegisterUI"
        android:background="@color/colorPrimaryDark">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:focusableInTouchMode="true">

        <EditText
                android:id="@+id/email_register"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="20dp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:hint="@string/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_background"
                android:padding="10dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>
        <EditText
                android:id="@+id/password_register"
                android:inputType="textPassword"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="20dp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:hint="@string/haslo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_background"
                android:padding="10dp"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edit_background"
                android:orientation="horizontal">

            <Spinner
                    android:id="@+id/city_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:popupBackground="@drawable/login_edit_background"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp" />
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edit_background"
                android:orientation="horizontal">

            <Spinner
                    android:id="@+id/office_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:popupBackground="@drawable/login_edit_background"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp" />
        </RelativeLayout>

        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textColor="@android:color/white"
                android:buttonTint="@color/colorBackgroudView"
                android:text="Zapoznałem się z treścią i zgadzam się z postanowieniami Regulaminu i Polityki prywatności"
                android:id="@+id/checkboxSelect"
        />

        <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_marginStart="25dp"-->
                <!--android:layout_marginEnd="25dp"-->
                <!--android:layout_marginTop="25dp">-->

            <!--<CheckBox-->
                    <!--android:id="@+id/checkItem"-->
                    <!--android:layout_marginTop="9dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"/>-->

            <!--<TextView-->
                    <!--android:id="@+id/itemTitle"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textColor="@android:color/white"-->
                    <!--android:text="Zapoznałem się z treścią i zgadzam się z postanowieniami Regulaminu i Polityki prywatności"/>-->

        <!--</LinearLayout>-->


        <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/colorButton"
                android:text="@string/zarejestruj"/>

    </LinearLayout>

</RelativeLayout>
